--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,8 @@ authors = [
   { name="Carson Coder", email="carsondpool@gmail.com" },
 ]
 description = "A small WLED light controller in Python"
-readme = "../README.md"
-license = { file="../LICENSE" }
+readme = "./README.md"
+license = { file="./LICENSE" }
 requires-python = ">=3.7"
 classifiers = [
     "Programming Language :: Python :: 3",
