--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 [project]
 name = "WLED_light_controller"
-version = "0.3.1"
+version = "0.3.2"
 authors = [
   { name="Carson Coder", email="carsondpool@gmail.com" },
 ]
@@ -17,8 +17,7 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "requests",
-    "pkg_resources"
+    "requests"
 ]
 
 [project.urls]
